--- a/myself.html
+++ b/myself.html
@@ -11,7 +11,7 @@
     <div id="first">
     <div id="intro">
     <p>Hi, I'm Allen Santhosh George <br><br> --BCA Student</p>
-    <img src="images/IMG_20210728_223257_017.jpg" alt="profile">
+    <img src="IMG_20210728_223257_017.jpg" alt="profile">
     </div>
 
 
